src/server/run/hpo_sim/snapshots/viguno__server__run__hpo_sim__term_term__test__hpo_sim_term_term_one_one.snap
---
source: src/server/run/hpo_sim/term_term.rs
expression: "&run_query(\"/hpo/sim/term-term?lhs=HP:0010442&rhs=HP:0001780\").await?"
---
version:
  hpo: 2023-04-05
  viguno: 0.0.0
query:
  lhs:
    - "HP:0010442"
  rhs:
    - "HP:0001780"
  ic_base: gene
  similarity: resnik
  combiner: fun-sim-avg
result:
  - lhs: "HP:0010442"
    rhs: "HP:0001780"
    score: 1.2074362
