src/server/run/hpo_sim/snapshots/viguno__server__run__hpo_sim__term_term__test__hpo_sim_term_term_two_two.snap
---
source: src/server/run/hpo_sim/term_term.rs
expression: "&run_query(web_server_data.clone(),\n                \"/hpo/sim/term-term?lhs=HP:0010442,HP:0000347&rhs=HP:0001780,HP:0000252\").await?"
---
version:
  hpo: 2024-07-01
  viguno: 0.0.0
query:
  lhs:
    - "HP:0010442"
    - "HP:0000347"
  rhs:
    - "HP:0001780"
    - "HP:0000252"
  ic_base: gene
  similarity: resnik
  combiner: fun-sim-avg
result:
  - lhs: "HP:0010442"
    rhs: "HP:0001780"
    score: 1.1945721
  - lhs: "HP:0000347"
    rhs: "HP:0000252"
    score: 0.7402858
  - lhs: "HP:0010442"
    rhs: "HP:0000252"
    score: 0.46725264
  - lhs: "HP:0000347"
    rhs: "HP:0001780"
    score: 0.46725264
